@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.93 2005/03/29 05:24:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.94 2005/03/29 23:53:19 allanonjl Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+  29 Mar 2005; John N. Laliberte <allanonjl@gentoo.org>
+  Complete overhaul of Users.py.  UI is smart, but not yet integrated
+  into the backend.
 
   28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added install complete/error message boxes and a TextView for displaying
